@@ -1,7 +1,10 @@
 2023-09-17 Sun  Jari Aalto  <jari.aalto@tuni.fi>
 
+	* tiny/tinybookmark.el (tinybookmark--cache-update): Emacs 30.0.50
+	correct byte compile errors.
+
 	* tiny/tinyadvice.el: (docstrings): Emacs 30.0.50 correct
-        byte compile errors
+        byte compile errors.
 
         * tiny/tiny-admin-util.el: Emacs 30.0.50 correct
         byte compile errors. Remove deprecated (require 'autoload).
